# Core

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md
samples/OpenGL/SimpleWindow/: CMakeLists.txt
samples/OpenGL/SimpleWindow/src/: SimpleFragmentShader.fragmentshader  main.cpp  main.h
samples/WebAssembly/DemoSite/: CMakeLists.txt  run.bat
samples/WebAssembly/DemoSite/src/: Index.html  Logo.psd
setup/: setup_emsdk_cmd.bat  setup_environment.bat
src/: LogicalTree.h  XamlWindow.h
src/Common/: Numeric.h
src/IO/: FileManagement.h
src/Logging/: LogLevel.h  Logger.h
src/Media/: VisualTree.h  VisualTreeElement.h
src/Parsing/: XamlNodeVisitor.h  XamlParser.h  XamlTokenType.h  XamlTokenizer.h
src/Rendering/: FontFamily.h  FontManager.h  XamlRenderContext.h  XamlRenderEngine.h  XamlServices.h
src/Rendering/Engine/: RenderEvents.h  RenderRegion.h  RenderSurface.h  RenderSurfaceContext.h  RoundedRectangleRenderRegion.h
src/Rendering/Helpers/: XamlElementTracker.h  XamlEngineParserNodeVisitor.h
src/Runtime/: BaseTypes.h  ContentElement.h  CornerRadius.h  FrameworkContentElement.h  GridLength.h  GridUnitType.h  HorizontalAlignment.h  IList.h  IXamlResolver.h  List.h  Properties.h  Rect.h  Size.h  SystemXamlResolver.h  TextWrapping.h  Thickness.h  TypeResolver.h  Types.h  VerticalAlignment.h  XamlAttachedProperty.h  XamlObject.h  XamlObjectReference.h  XamlProperty.h  XamlResolver.h  XamlRuntimeObject.h  XamlType.h
src/Runtime/Media/: Visual.h
src/Services/: CommonTypes.h  XamlObjectFactory.h
src/UI/: Brush.h  Canvas.h  ColumnDefinition.h  ColumnDefinitionCollection.h  ContentControl.h  Control.h  DefinitionBase.h  DefinitionCollectionBase.h  FrameworkElement.h  Grid.h  Image.h  ImageSource.h  Panel.h  Rectangle.h  RowDefinition.h  RowDefinitionCollection.h  Shape.h  SolidColorBrush.h  StackPanel.h  TextAlignment.h  TextBlock.h  UIElement.h  UIElementCollection.h  UIXamlResolver.h  UserControl.h
src/UI/Drawing/: Color.h
src/UI/Imaging/: BitmapSource.h
src/UI/Internals/: DefinitionState.h
tools/emsdk-setup/: Setup-emsdk.ps1
